--- a/client/src/views/styles/profile.css
+++ b/client/src/views/styles/profile.css
@@ -102,3 +102,9 @@
   margin-right: 5px;
   font-size: 1.2rem;
 }
+
+.no-posts{
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+}
